--- a/JCloze_Gapfillexercise.htm
+++ b/JCloze_Gapfillexercise.htm
@@ -47,7 +47,8 @@ Gap-fill Exercise
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #8E44AD;
 	--strExBGColor:      #dddddd;
 }
 
