--- a/JCross_final1.htm
+++ b/JCross_final1.htm
@@ -48,7 +48,8 @@ Animal Crossword Puzzle - Level 1
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #F1C40F;
 	--strExBGColor:      #dddddd;
 }
 
