--- a/JCross_final2.htm
+++ b/JCross_final2.htm
@@ -47,7 +47,8 @@ Animal Crossword Puzzle - Level 2
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #D4AC0D;
 	--strExBGColor:      #dddddd;
 }
 
