--- a/JCross_final3.htm
+++ b/JCross_final3.htm
@@ -48,7 +48,8 @@ Animal Crossword Puzzle - Level 3
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #F4D03F;
 	--strExBGColor:      #dddddd;
 }
 
