--- a/JMatch_Final_Level1.htm
+++ b/JMatch_Final_Level1.htm
@@ -48,7 +48,8 @@ Find the suitable word sound for each word - Level 1
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #C0392B;
 	--strExBGColor:      #dddddd;
 }
 
