--- a/JMatch_Final_Level2.htm
+++ b/JMatch_Final_Level2.htm
@@ -48,7 +48,8 @@ Word Sound - Level 2
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #E74C3C;
 	--strExBGColor:      #dddddd;
 }
 
