--- a/JMatch_Final_Level3.htm
+++ b/JMatch_Final_Level3.htm
@@ -48,7 +48,8 @@ Word Sound - Level 3
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #EC7063;
 	--strExBGColor:      #dddddd;
 }
 
