--- a/JMix.-Exercises_Final2.htm
+++ b/JMix.-Exercises_Final2.htm
@@ -48,7 +48,8 @@ Jumbled Sentence Exercise - Level 2
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #27AE60;
 	--strExBGColor:      #dddddd;
 }
 
