--- a/JMix.-Exercises_Final3.htm
+++ b/JMix.-Exercises_Final3.htm
@@ -48,7 +48,8 @@ Jumbled Sentence Exercise - Level 3
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #2ECC71;
 	--strExBGColor:      #dddddd;
 }
 
