--- a/JQuiz_differentsound_Final1.htm
+++ b/JQuiz_differentsound_Final1.htm
@@ -48,7 +48,8 @@ Which one is different? - Level 1
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #2980B9;
 	--strExBGColor:      #dddddd;
 }
 
