--- a/JQuiz_differentsound_Final2.htm
+++ b/JQuiz_differentsound_Final2.htm
@@ -48,7 +48,8 @@ Which one is different?- Level 2
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #3498DB;
 	--strExBGColor:      #dddddd;
 }
 
