--- a/JQuiz_differentsound_Final3.htm
+++ b/JQuiz_differentsound_Final3.htm
@@ -48,7 +48,8 @@ Which one is different? - Level 3
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #2E86C1;
 	--strExBGColor:      #dddddd;
 }
 
