--- a/JQuiz_final_listening1.htm
+++ b/JQuiz_final_listening1.htm
@@ -5,12 +5,12 @@
 
 <meta name="dc:creator" content="Vanda Costa G." />
 <meta name="dc:creator" content="Vanda" />
-<meta name="dc:title" content="Tongue Twisters - Listening1" />
+<meta name="dc:title" content="Tongue Twisters - Listening 1" />
 
 
 
 <title>
-Tongue Twisters - Listening1
+Tongue Twisters - Listening 1
 </title>
 
 <!-- Made with executable version 7.0 Release 3 Build 0 -->
@@ -48,7 +48,8 @@ Tongue Twisters - Listening1
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #154360;
 	--strExBGColor:      #dddddd;
 }
 
@@ -1639,7 +1640,7 @@ function DownTime(){
 <!-- EndTopNavButtons -->
 
 <div class="Titles">
-	<h2 class="ExerciseTitle">Tongue Twisters - Listening1</h2>
+	<h2 class="ExerciseTitle">Tongue Twisters - Listening 1</h2>
 
 	<h3 class="ExerciseSubtitle">Quiz</h3>
 
