--- a/JQuiz_final_listening2.htm
+++ b/JQuiz_final_listening2.htm
@@ -48,7 +48,8 @@ Tongue Twisters - Listening 2
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #1B4F72;
 	--strExBGColor:      #dddddd;
 }
 
