--- a/JQuiz_final_listening3.htm
+++ b/JQuiz_final_listening3.htm
@@ -48,7 +48,8 @@ Tongue Twisters - Listening 3
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #21618C;
 	--strExBGColor:      #dddddd;
 }
 
