--- a/JQuiz_lastsyllable_Final1.htm
+++ b/JQuiz_lastsyllable_Final1.htm
@@ -48,7 +48,8 @@ Select the correct picture with the last syllable of the written word
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #7F8C8D;
 	--strExBGColor:      #dddddd;
 }
 
