--- a/JQuiz_syllables_FINAL1.htm
+++ b/JQuiz_syllables_FINAL1.htm
@@ -48,7 +48,8 @@ Syllables in division
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #E67E22;
 	--strExBGColor:      #dddddd;
 }
 
