--- a/JMix.-Exercises_Final1.htm
+++ b/JMix.-Exercises_Final1.htm
@@ -48,7 +48,8 @@ Jumbled Sentence Exercise - Level 1
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-	--strPageBGColor:    #ffffff;
+/*	--strPageBGColor:    #ffffff;*/
+	--strPageBGColor:    #16A085;
 	--strExBGColor:      #dddddd;
 }
 
