More color updates

--- a/JCloze_Gapfillexercise.htm
+++ b/JCloze_Gapfillexercise.htm
@@ -42,14 +42,13 @@ Gap-fill Exercise
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #72296A;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #8E44AD;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #B340A7;
+	--strExBGColor:      #DD9FD7;
 }
 
 body{
