--- a/JCross_final2.htm
+++ b/JCross_final2.htm
@@ -42,14 +42,13 @@ Animal Crossword Puzzle - Level 2
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #515151;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #D4AC0D;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #FFA54A;
+	--strExBGColor:      #FFFF80;
 }
 
 body{
