--- a/JCross_final3.htm
+++ b/JCross_final3.htm
@@ -43,14 +43,13 @@ Animal Crossword Puzzle - Level 3
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #515151;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #F4D03F;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #E1DC1C;
+	--strExBGColor:      #FFFF97;
 }
 
 body{
