--- a/JMatch_Final_Level1.htm
+++ b/JMatch_Final_Level1.htm
@@ -36,21 +36,20 @@ Find the suitable word sound for each word - Level 1
 	--strFontFace:       arial,helvetica,sans-serif;
 	--strFontSize:       small;
 	--strTextColor:      #000000;
-	--strTitleColor:     #000000;
+	--strTitleColor:     #ffffff;
 
 	--strFuncLightColor: #eeeeee;
 	--strFuncShadeColor: #6e6e6e;
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #432121;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #C0392B;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #834040;
+	--strExBGColor:      #D9B0B0;
 }
 
 body{
