--- a/JMatch_Final_Level3.htm
+++ b/JMatch_Final_Level3.htm
@@ -43,14 +43,13 @@ Word Sound - Level 3
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #2B1515;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #EC7063;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #6D4954;
+	--strExBGColor:      #A96969;
 }
 
 body{
