--- a/JMix.-Exercises_Final3.htm
+++ b/JMix.-Exercises_Final3.htm
@@ -43,14 +43,13 @@ Jumbled Sentence Exercise - Level 3
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #004040;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #2ECC71;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #7EFBFB;
+	--strExBGColor:      #006868;
 }
 
 body{
