--- a/JQuiz_differentsound_Final1.htm
+++ b/JQuiz_differentsound_Final1.htm
@@ -36,21 +36,20 @@ Which one is different? - Level 1
 	--strFontFace:       arial,helvetica,sans-serif;
 	--strFontSize:       small;
 	--strTextColor:      #000000;
-	--strTitleColor:     #000000;
+	--strTitleColor:     #ffffff;
 
 	--strFuncLightColor: #eeeeee;
 	--strFuncShadeColor: #6e6e6e;
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #000080;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #2980B9;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #4848F9;
+	--strExBGColor:      #C7C2F8;
 }
 
 body{
