--- a/JQuiz_final_listening1.htm
+++ b/JQuiz_final_listening1.htm
@@ -36,21 +36,20 @@ Tongue Twisters - Listening 1
 	--strFontFace:       arial,helvetica,sans-serif;
 	--strFontSize:       small;
 	--strTextColor:      #000000;
-	--strTitleColor:     #000000;
+	--strTitleColor:     #ffffff;
 
 	--strFuncLightColor: #eeeeee;
 	--strFuncShadeColor: #6e6e6e;
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #003E00;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #154360;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #6A6A35;
+	--strExBGColor:      #FFFFBB;
 }
 
 body{
