--- a/JQuiz_syllables_FINAL1.htm
+++ b/JQuiz_syllables_FINAL1.htm
@@ -36,21 +36,20 @@ Syllables in division
 	--strFontFace:       arial,helvetica,sans-serif;
 	--strFontSize:       small;
 	--strTextColor:      #000000;
-	--strTitleColor:     #000000;
+	--strTitleColor:     #ffffff;
 
 	--strFuncLightColor: #eeeeee;
 	--strFuncShadeColor: #6e6e6e;
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #800000;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #E67E22;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #B00000;
+	--strExBGColor:      #FFD2D2;
 }
 
 body{
