--- a/JCross_final1.htm
+++ b/JCross_final1.htm
@@ -43,14 +43,13 @@ Animal Crossword Puzzle - Level 1
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #515151;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #F1C40F;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #FFFF00;
+	--strExBGColor:      #F9F9A4;
 }
 
 body{
