--- a/JMix.-Exercises_Final1.htm
+++ b/JMix.-Exercises_Final1.htm
@@ -43,14 +43,13 @@ Jumbled Sentence Exercise - Level 1
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #004000;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #16A085;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #727200;
+	--strExBGColor:      #D6ECD6;
 }
 
 body{
