--- a/JMix.-Exercises_Final2.htm
+++ b/JMix.-Exercises_Final2.htm
@@ -43,14 +43,13 @@ Jumbled Sentence Exercise - Level 2
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #0FFFFF;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
-	--strNavTextColor:   #ffffff;
+	--strNavTextColor:   #000000;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #27AE60;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #009393;
+	--strExBGColor:      #B7FFFF;
 }
 
 body{
