--- a/JQuiz_differentsound_Final2.htm
+++ b/JQuiz_differentsound_Final2.htm
@@ -36,21 +36,20 @@ Which one is different?- Level 2
 	--strFontFace:       arial,helvetica,sans-serif;
 	--strFontSize:       small;
 	--strTextColor:      #000000;
-	--strTitleColor:     #000000;
+	--strTitleColor:     #ffffff;
 
 	--strFuncLightColor: #eeeeee;
 	--strFuncShadeColor: #6e6e6e;
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #000064;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #3498DB;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #0000A4;
+	--strExBGColor:      #B2B2D9;
 }
 
 body{
