--- a/JQuiz_final_listening2.htm
+++ b/JQuiz_final_listening2.htm
@@ -43,14 +43,13 @@ Tongue Twisters - Listening 2
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #007E00;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #1B4F72;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #7BF67B;
+	--strExBGColor:      #D9FFD9;
 }
 
 body{
