--- a/JQuiz_final_listening3.htm
+++ b/JQuiz_final_listening3.htm
@@ -43,14 +43,13 @@ Tongue Twisters - Listening 3
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #1E3C3C;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #21618C;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #418181;
+	--strExBGColor:      #DDEEEE;
 }
 
 body{
