--- a/JQuiz_lastsyllable_Final1.htm
+++ b/JQuiz_lastsyllable_Final1.htm
@@ -36,21 +36,20 @@ Select the correct picture with the last syllable of the written word
 	--strFontFace:       arial,helvetica,sans-serif;
 	--strFontSize:       small;
 	--strTextColor:      #000000;
-	--strTitleColor:     #000000;
+	--strTitleColor:     #ffffff;
 
 	--strFuncLightColor: #eeeeee;
 	--strFuncShadeColor: #6e6e6e;
 	--strLinkColor:      #0000ff;
 	--strVLinkColor:     #ff00ff;
 	
-	--strNavBarColor:    #000000;
+	--strNavBarColor:    #00002F;
 	--strNavLightColor:  #7f7f7f;
 	--strNavShadeColor:  #000000;
 	--strNavTextColor:   #ffffff;
 	
-/*	--strPageBGColor:    #ffffff;*/
-	--strPageBGColor:    #7F8C8D;
-	--strExBGColor:      #dddddd;
+	--strPageBGColor:    #00005A;
+	--strExBGColor:      #ECECFF;
 }
 
 body{
